--- a/kiosk/templates/kiosk/menu_detail.html
+++ b/kiosk/templates/kiosk/menu_detail.html
@@ -1,7 +1,26 @@
-<h1>{{menu.name}}</h1>
-<br>
-<img src="{{menu.image.url}}" class="card-img-top" alt="{{menu.image}}">
-<p>{{menu.price}}</p>
+{% load static %}
+<html>
+<head>
+<meta charset="utf-8">
+<link rel="stylesheet" href="{% static 'kiosk/style.css' %}">
+</head>
+<body>
+<div id = "one_menu">
+    <img id = "header_img" src="{{menu.image.url}}" class="card_img_top" alt="{{menu.image}}">
+</div>
+<div id = "one_menu_text">
+    <h1 style="font-size: 60px;">{{menu.name}}</h1>
+    <p class="card-text">explanation</p>
+    <h2 style="font-size: 40px">{{menu.price}}원</h2>
+</div>
+    <a href="#"><p onclick="alert('메뉴가 장바구니에 담겼습니다.')"><button class="custom-btn btn-16">장바구니</button></p></a>
+    <form action = "{% url 'kiosk:index2' menu.id %}" method="post">
+        {% csrf_token %}
+    <a href="#"><p onclick="alert('주문이 완료되었습니다.')"><button value="{{menu.id}}" class="custom-btn btn-13" type="submit">주문하기</button></p></a>
+</form>
+</body>
+</html>
+
 
 
 
