--- a/kiosk/templates/kiosk/menu_list.html
+++ b/kiosk/templates/kiosk/menu_list.html
@@ -14,8 +14,8 @@
     <div class="card">
         <img id = "card_img" src="{{menu.image.url}}" class="card_img_top" alt="{{menu.image}}">
         <div class="card-body">
-          <h5 class="card-title"><a href="{% url 'kiosk:menu_detail' menu.slug %}">{{menu.name}}</a>
-          <p class="card-text">explanation</p>
+          <h5 class="card-title"><a href="{% url 'kiosk:menu_detail' menu.slug %}">{{menu.name}}</a></h5>
+          <p class="card-text">explain</p>
           <p class="card-price">{{menu.price}}원</p>
         </div>
     </div>
