--- a/kiosk/templates/kiosk/menu_detail.html
+++ b/kiosk/templates/kiosk/menu_detail.html
@@ -10,7 +10,7 @@
 </div>
 <div id = "one_menu_text">
     <h1 style="font-size: 60px;">{{menu.name}}</h1>
-    <p class="card-text">explanation</p>
+    <p class="card-text">explain</p>
     <h2 style="font-size: 40px">{{menu.price}}원</h2>
 </div>
     <a href="#"><p onclick="alert('메뉴가 장바구니에 담겼습니다.')"><button class="custom-btn btn-16">장바구니</button></p></a>
