--- a/templates/home.html
+++ b/templates/home.html
@@ -1,11 +1,14 @@
 {% load static %}
-<link rel="stylesheet" href="{% static 'style.css' %}">
+<head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="{% static 'style.css' %}">
+    </head>
 <body>
 <header>
 <h1 style="font-size: 50px; text-align: center;">안녕하세요. 카페입니다.</h1>
 </header>
 <div id="wrap">
-<button class="custom-btn btn-13"><a href="{% url 'kiosk:index' %}">메뉴 보기</a></button>
+    <a href="{% url 'kiosk:index' %}"><button class="custom-btn btn-16">메뉴 보기</button></a>
 </div>
 </body>
     
