--- a/templates/home.html
+++ b/templates/home.html
@@ -2,10 +2,14 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="{% static 'style.css' %}">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+KR&display=swap" rel="stylesheet">
     </head>
 <body>
 <header>
-<h1 style="font-size: 50px; text-align: center;">안녕하세요. 카페입니다.</h1>
+<p style="font-size: 70px;">당신의 커피</p>
+<p style="font-size: 30px;">Coffee always by Your side</p>
 </header>
 <div id="wrap">
     <a href="{% url 'kiosk:index' %}"><button class="custom-btn btn-16">메뉴 보기</button></a>
